# itsubdl

./: .gitignore  README.md  pyproject.toml
src/: itunesdl.py
src/itsubdl/: appletv.py  cli.py  config_manager.py  pluralize.py  tmdb.py  tmdbmovie.py
src/itsubdl/subtitle/: subdeduper.py  subhelper.py  subtitlepatterns.py
test/: run_single_test.py  run_tests.sh  test_urls.txt
