[project]
name = "itsubdl"
version = "1.0.3"
description = "Download subtitles from iTunes."
readme = "README.md"
authors = [
  { name="squash" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "m3u8",
  "platformdirs",
  "rapidfuzz",
  "requests",
  "rich",
  "simple-justwatch-python-api",
  "subby @ git+https://github.com/vevv/subby.git",
  "toml"
]

[project.scripts]
itsubdl = "itsubdl.cli:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
